# h-scheduler

./: .gitignore  CHANGELOG.md  h-scheduler.cabal  h-scheduler.cabal.save0  newnotes.md
app/: CLI.hs  Caltests.hs  Common.hs  Datetests.hs  Events.hs  Files.hs  Main.hs  Solver.hs  Statetest.hs  inputParsers.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
