cabal-version:      2.4
name:               h-scheduler
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Yan
maintainer:         y.passeniouk@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable h-scheduler
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: CLI.hs, Events.hs, inputParsers.hs, Solver.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, 
                      transformers >= 0.5.6, 
                      time >= 1.12.1, 
                      megaparsec >= 9.2.0,
                      optparse-applicative >= 0.16.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
