cabal-version:      3.6
name:               h-scheduler
version:            0.1.0.0

author:             Yan
maintainer:         y.passeniouk@gmail.com

extra-source-files: CHANGELOG.md

executable h-scheduler
    main-is:          Main.hs

    other-modules:CLI, Events, InputParsers, Solver, Files, Datetests, Common, Caltests


    build-depends:    base ^>=4.16.1.0,
                      ghc >= 9.0.2, 
                      transformers >= 0.5.6,
                      mtl >= 2.2.2,
                      text >= 1.2, 
                      time >= 1.9.3, 
                      megaparsec >= 9.2.0,
                      optparse-applicative >= 0.17.0.0,
                      containers >= 0.6.2.1,
                      directory >= 1.3.6.0,
                      lens >= 5,
                      parser-combinators >= 1.3,
                      random >= 1.2.1.1,
                      text-show >= 3.9.6
    hs-source-dirs:   app
    default-language: Haskell2010
